Non-vassiliev invariants and power series invariants, Max's feedback through to weight systems

--- a/macros.tex
+++ b/macros.tex
@@ -19,6 +19,8 @@
 \newcommand*{\virtcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_virtual_crossing.pdf}}}
 \newcommand*{\semivirtposcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_semivirtual_positive_crossing.pdf}}}
 \newcommand*{\semivirtnegcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_semivirtual_negative_crossing.pdf}}}
+\newcommand*{\uncross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_uncrossing.pdf}}}
+\newcommand*{\unknot}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_unknot.pdf}}}
 
 % T4T and T1T graphics
 \newcommand*{\tftsouth}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_four_term_south.pdf}}}
