--- a/references.bib
+++ b/references.bib
@@ -462,3 +462,32 @@
 	issn = {0195-6698},
 	author = {Louis H. Kauffman},
 }
+
+@article{many-classical-knot-invariants-are-not-vassiliev-invariants,
+	author = {Dean, John},
+	title = {Many classical knot invariants are not Vassiliev invariants},
+	journal = {Journal of Knot Theory and Its Ramifications},
+	volume = {03},
+	number = {01},
+	pages = {7-10},
+	year = {1994},
+}
+
+@inbook{twist-sequnces-and-vassiliev-invariants,
+	author = {Rolland Trapp},
+	journal = {Journal of Knot Theory and Its Ramifications},
+	series = {Series on Knots and Everything},
+	title = {Twist sequences and Vassiliev invariants},
+	booktitle = {Random Knotting and Linking},
+	pages = {159-173},
+	year = {1994},
+}
+
+@inproceedings{vassiliev-invariants-as-polynomials,
+	title = {Vassiliev invariants as polynomials},
+	author = {Simon Willerton},
+	journal = {Banach Center Publications},
+	year = {1998},
+	volume = {42},
+	pages = {457-463},
+}
