Max's feedback up to cococo bialgebra

--- a/references.bib
+++ b/references.bib
@@ -449,7 +449,7 @@
 	pages = {139586},
 	year = {2025},
 	issn = {0370-2693},
-	author = {D. Khudoteplov and A. Morozov and A. Sleptsov},
+	author = {Dmitry Khudoteplov and A. Morozov and A. Sleptsov},
 }
 
 @article{virtual-knot-theory,
